--- a/asad.css
+++ b/asad.css
@@ -1,8 +1,9 @@
 *{
-    margin: 0;
+    margin: 0%;
 }
 header{
- 
+  margin: 0% auto;
+  width:100%;
   font-family: 'Ubuntu', sans-serif;
   background-color: #c7b4b4;
 
@@ -63,5 +64,7 @@ header nav ul li button:hover{
 .banner .banner-left .btn{
     margin-right: 10px;
 }
-
+.banner img{
+    width: 50%;
+}
 
