--- a/asad.css
+++ b/asad.css
@@ -52,19 +52,49 @@ header nav ul li button:hover{
 }
 .banner{
    
-    padding:100px 25px 0px;
+    padding:60px 25px 0px;
     align-items: center;
     width:100%;
     display:flex;
     
 }
 .banner .banner-left h2,h1,p{
-    margin-bottom:15px;
+    margin-bottom:25px;
+}
+.banner h2{
+    color: rgb(22, 73, 56);
 }
 .banner .banner-left .btn{
     margin-right: 10px;
 }
 .banner img{
-    width: 50%;
+    width: 40%;
 }
-
+,banner h2{
+    font-size: 40px;
+}
+.banner h1{
+    font-size: 50px;
+}
+/*main section is starting*/
+.about{
+    text-align:center;
+    justify-content:center;
+    align-items: center;
+    margin:20px 50px;
+    padding:40px;
+    background-color: antiquewhite;
+}
+.about h1,p{
+    margin-bottom:20px;
+}
+.about .abfoot{
+    display: flex;
+}
+.abfoot .f1,.f2,.f3,.f4{
+      width:20%;
+      margin-right:10px;
+      justify-content: center;
+      align-items: center;
+      text-align: center;
+}
